--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,44 @@
+# Don't track content of these folders
+out/
+outs/
+output/
+outputs/
+model/
+models/
+log/
+logs/
+result/
+results/
+__pycache__/
+.idea/
+core
+
+# Compiled source #
+###################
+*.com
+*.class
+*.dll
+*.exe
+*.o
+*.so
 *.pyc
-*.json
+
+# Packages #
+############
+# it's better to unpack these files and commit the raw source
+# git has its own built in compression methods
+*.7z
+*.dmg
+*.gz
+*.iso
+*.jar
+*.rar
+*.tar
+*.zip
+*.mat
+*.png
+*.jpg
+*.npy
+*.pt
 *.pth
-*.log
+*.json
